// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCollapsibleNavAccordion renders as a sub item 1`] = `
<div
  class="euiAccordion euiCollapsibleNavAccordion emotion-euiAccordion-euiCollapsibleNavAccordion-isSubItem"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="generated-id"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      >
        <span
          class="euiCollapsibleNavLink emotion-euiCollapsibleNavLink-isSubItem"
        >
          Accordion header
        </span>
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isClosed-euiCollapsibleNavAccordion__arrow"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="generated-id"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    >
      <div
        class="euiCollapsibleNavItem__items euiCollapsibleNavAccordion__children emotion-euiCollapsibleNavItem__items-isSubItem"
      >
        <span
          class="euiCollapsibleNavLink euiCollapsibleNavSubItem emotion-euiCollapsibleNavLink-isSubItem"
        >
          <span
            class="euiCollapsibleNavItem__title emotion-euiCollapsibleNavItem__title"
          >
            sub item
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCollapsibleNavAccordion renders as a top level item 1`] = `
<div
  aria-label="aria-label"
  class="euiAccordion euiCollapsibleNavAccordion testClass1 testClass2 emotion-euiAccordion-euiCollapsibleNavAccordion-isTopItem-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="generated-id"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      >
        <span
          class="euiCollapsibleNavLink emotion-euiCollapsibleNavLink-isTopItem"
        >
          Accordion header
        </span>
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isClosed-euiCollapsibleNavAccordion__arrow"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="generated-id"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    >
      <div
        class="euiCollapsibleNavItem__items euiCollapsibleNavAccordion__children emotion-euiCollapsibleNavItem__items-isTopItem"
      >
        <span
          class="euiCollapsibleNavLink euiCollapsibleNavSubItem emotion-euiCollapsibleNavLink-isSubItem"
        >
          <span
            class="euiCollapsibleNavItem__title emotion-euiCollapsibleNavItem__title"
          >
            sub item
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
